# hybrid-cvs

./: .cvsignore  .indent.pro  BUGS  ChangeLog  HOWTO-CVS  Hybrid-team  INSTALL  LICENSE  Makefile.in  README.FIRST  README.PLATFORMS  README.VMS  README.small_nets  RELNOTES  TODO  clean.com  configure  configure.ac  doxygen.conf  install-sh  make.com  opers.txt
contrib/: 4000_ip-cloaking.patch  Makefile.in  README  README.LMH  README.cidr_bans  README.cloaking  README.disable_identd  cidr_bans.diff  confgen.pgsql  confgen.pl  disable_identd.diff  encap+olog.diff  example_module.c  halfops.diff  hyb7+angel.diff  hyb7-rc10+demon.diff  hyb7-rc10+gozem.diff  ip_cloaking.c  ircd-hybrid.spec  links_notice.c  lmh.diff  m_capture.c  m_change.c  m_classlist.c  m_clearchan.c  m_ctrace.c  m_etrace.c  m_flags.c  m_force.c  m_hash.c  m_help.c  m_jupe.c  m_killhost.c  m_ltrace.c  m_mkpasswd.c  m_ojoin.c  m_omotd.c  m_operspy.c  m_opme.c  m_services.c  (+21 more)
contrib/help/: Makefile.in
contrib/help/opers/: cmode  ctrace  dline  etrace  index  info  join  kline  ltrace  motd  omotd  set  spoof  squit  stats  testmask  umode  undline  ungline  unkline  unresv  unxline  version  xline
contrib/help/users/: flags  index  umode
doc/: CIDR.txt  ChangeLog.old  Makefile  Makefile.in  README.cidr_bans  challenge.txt  channels.txt  convertconf-example.conf  example.conf  example.conf.efnet  example.conf.quick  example.efnet.conf  example_old.conf  guidelines.txt  index.txt  ircd.8  kline.txt  messages.txt  modeg.txt  modes.txt  mtrie.txt  operguide.txt  opermyth.txt  opers.txt  resv.txt  server-version-info  serverhide.txt  simple.conf  users.txt  vchans.txt  whats-new.txt
doc/technical/: Persistent_Clients.txt  README.openssl  cryptlink.txt  debug_api.txt  event.txt  fd-management.txt  file-management.txt  hostmask.txt  iauth.txt  index.txt  linebuf.txt  message-customisation.txt  network.txt  send.txt  ts5.txt  whats-new-code.txt
etc/: Makefile.in  convertconf-example.conf  example.conf  example.conf.quick  example.efnet.conf  ircd.motd  simple.conf
help/: Makefile.in
help/opers/: dline  index  kline  rkline  rxline  set  stats  umode  xline
help/users/: index  umode
include/: Makefile.in  balloc.h  blalloc.h  channel.h  channel_mode.h  class.h  client.h  cluster.h  common.h  config.h  config.h.dist  control.h  dalloca.h  dbuf.h  debug.h  defaults.h  defs.h  dline_conf.h  event.h  fdlist.h  fileio.h  flud.h  handlers.h  hash.h  hook.h  hostmask.h  inet_misc.h  io.h  irc_getaddrinfo.h  irc_getnameinfo.h  irc_res.h  irc_reslib.h  irc_string.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_handler.h  ircd_signal.h  ircdauth.h  linebuf.h  (+50 more)
lib/pcre/: Makefile.in  config.h  pcre.h  pcre_compile.c  pcre_config.c  pcre_dfa_exec.c  pcre_exec.c  pcre_get.c  pcre_globals.c  pcre_internal.h  pcre_ord2utf8.c  pcre_printint.c  pcre_refcount.c  pcre_tables.c  pcre_ucp_findchar.c  pcre_valid_utf8.c  pcre_version.c  pcre_xclass.c  ucp.h  ucp_findchar.c  ucpinternal.h  ucptable.c
messages/: Makefile.in  README  ayb.lang  custom.lang  custom.mo  ircd-croatian.lang  ircd-danish.lang  ircd-dutch.lang  ircd-french.lang  ircd-german.lang  ircd-norwegian.lang  ircd-polish.lang  ircd-russian.lang  ircd-spanish.lang  ircd-standard.example.lang  ircd-swedish.lang
modules/: .depend  Makefile  Makefile.in  descrip.mms  m_accept.c  m_admin.c  m_away.c  m_capab.c  m_cburst.c  m_challenge.c  m_cjoin.c  m_clearchan.c  m_client.c  m_close.c  m_connect.c  m_cryptlink.c  m_dmem.c  m_drop.c  m_encap.c  m_eob.c  m_error.c  m_etrace.c  m_gline.c  m_hash.c  m_help.c  m_htm.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_lljoin.c  m_llnick.c  m_locops.c  m_ltrace.c  m_lusers.c  m_map.c  (+35 more)
modules/core/: Makefile.in  descrip.mms  m_die.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_sjoin.c  m_squit.c
servlink/: .cvsignore  Makefile.in  control.c  control.h  io.c  io.h  servlink.c  servlink.h
src/: .cvsignore  .depend  Makefile.in  adns.c  balloc.c  blalloc.c  channel.c  channel_mode.c  class.c  client.c  cluster.c  crypt.c  csvlib.c  dbuf.c  debug.c  descrip.mms  dline_conf.c  dynlink.c  event.c  fdlist.c  fileio.c  flud.c  getopt.c  hash.c  hook.c  hostmask.c  inet_misc.c  io_unix.c  io_win32.c  irc_getaddrinfo.c  irc_getnameinfo.c  irc_res.c  irc_reslib.c  irc_string.c  ircd.c  ircd_lexer.l  ircd_parser.y  ircd_signal.c  ircdauth.c  kdparse.c  (+115 more)
tools/: .cvsignore  Makefile.in  README  README.mkpasswd  convertconf.c  convertilines.c  convertklines.c  descrip.mms  encspeed.c  fixklines.c  install_ircd  ircd_start.c  klineParse.c  md5mkpasswd.c  mkconf  mkpasswd.c  start_ircd.c  untabify  viconf.c
tools/rsa_respond/: Makefile  README  buffer.c  buffer.h  configure  configure.ac  genkey.c  respond.c  rsa_respond.c
